@@ -3,6 +3,8 @@
 = GENI Clearinghouse and Portal Release Notes =
 
 == 1.7 ==
+ * New project lead email had broken link (#593)
+ * New project lead email sometimes had blank for name (#521)
 
 == 1.6.1 ==
   * Import databascript was losing non member log messages (#589)
